# syntax-hilight-battle-api

./: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
migrations/: seed.sql
migrations/2021-05-03-182854_create_posts/: up.sql
migrations/2021-05-04-184113_create_hilights/: down.sql  up.sql
migrations/2021-05-04-184217_create_results/: up.sql
src/: main.rs  model.rs  schema.rs
