[package]
name = "syntax-hilight-battle-api"
version = "0.1.0"
authors = ["sadness_ojisan <sadness.ojisan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.125", features = ["derive"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
actix-cors = "0.5.4"
